[package]
name = "rust-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.37.0"

envy = "0.4.2"
dotenv = "0.15"  # To load the .env file

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
log = "0.4.26"

sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls"] }
rust_decimal = "1.36.0"
redis = "0.29.0"

serde = "1.0.216"
serde_json = "1.0.134"
serde-pickle = "1.2.0"
anyhow = "1.0" # For error handling"
url = { version = "2.5.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
uuid = { version = "1.14.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.9.0"
base64 = "0.22.1"

solana-client = "2.1.7"
solana-sdk = "2.1.7"
spl-associated-token-account = "6.0.0"
spl-token = "7.0.0"
spl-token-2022 = "7.0.0"
solana-commitment-config = "2.2.1"

jito-sdk-rust = "0.1.0"